--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div id="navToggle" class="nav-toggle">☰</div>
         <!-- Navigation Menu -->
         <div class="svg-divider">
-            <svg height="20" width="100%">
-                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+            <svg class="divider-style-alt" height="20" width="100%">
+                <line x1="0" y1="10" x2="100%" y2="10" />
             </svg>
         </div>
         <nav id="navbar" class="navbar">
@@ -45,8 +45,8 @@
                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                     <h2 class="landing-page">Summary</h2>
                     <div class="svg-divider">
-                        <svg height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        <svg class="divider-style-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
                     <div>
@@ -58,8 +58,8 @@
                     </div>
                     <h2 class="landing-page">Work History/Resumes</h2>
                     <div class="svg-divider">
-                        <svg height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        <svg class="divider-style-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
                     <div>
@@ -67,8 +67,8 @@
                         <p>My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
                     </div>
                     <div class="svg-divider">
-                        <svg height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        <svg class="divider-style-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
                 </main>
@@ -79,9 +79,10 @@
              <div class="container">
                  <h1>About Me!</h2>
                  <div class="svg-divider">
-                    <svg height="20" width="100%">
-                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                    <svg class="divider-style-main" height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" />
                     </svg>
+                 </div>
                  </div>
                      <p>I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
                      My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
@@ -133,7 +134,7 @@
              <div class="container">
                  <h1>Personal Blog</h1>
                      <div class="svg-divider">
-                        <svg class="divider-style-alt" height="20" width="100%">
+                        <svg class="divider-style-main" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                      </div>
@@ -144,22 +145,22 @@
              <div class="container">
                 <h1>Contact Me</h1>
                     <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
-                <div class="svg-divider">
-                    <svg height="20" width="100%">
-                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                 <div class="svg-divider">
+                    <svg class="divider-style-main" height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" />
                     </svg>
-                </div>
+                 </div>
                 <h2>Get In Touch!</h2>
                 <ul>
                     <li>Email: <a href="mailto:Jack_cooper01@yahoo.com">Jack_cooper01@yahoo.com</a></li>
                     <li>LinkedIn: <a href="https://www.linkedin.com/in/jackcoop" target="_blank">Your LinkedIn</a></li>
                     <li>GitHub: <a href="https://github.com/Jack-A-Cooper" target="_blank">Your GitHub</a></li>
                 </ul>
-                <div class="svg-divider">
-                    <svg height="20" width="100%">
-                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                 <div class="svg-divider">
+                    <svg class="divider-style-main" height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" />
                     </svg>
-                </div>
+                 </div>
                 <h2>Connect With Me!</h2>
                     <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your visions. Feel free to connect with me on any of the platforms above, or just drop me a line here. I'll get back to you as soon as possible!</p>
               </div>
