--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
                         <p class="center-text">Hello and welcome to my corner of the internet!</p>
+                    <div class="svg-divider">
+                        <svg class="divider-style-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
+                        </svg>
+                    </div>
                     <div class="image-container">
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border"></img>
                     </div>
