--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
             <div class="container">
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
-                        <div id="typed-text"></div>
-                        <p class="center-text">Yo! Hello!</p>
+                    <div class="centered-container">
+                        <div id="typed-text">Yo! Hello!</div>
+                    </div>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
@@ -51,8 +52,8 @@
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
-                    <div>
-                        <p class="center-text">As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
+                    <div class="centered-container">
+                        <p>As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
                         expand my technical skills. While I have a strong foundation in programming languages like C, C++, and Python, I am currently honing my skills in
                         AI and machine learning, evident in my ongoing personal projects. My experience includes developing innovative software solutions and enhancing existing
                         systems with a focus on efficiency and user experience. Beyond technical skills, my roles in customer service have sharpened my communication and
@@ -64,9 +65,9 @@
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
-                    <div>
-                        <p class="center-text">My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
-                        <p class="center-text">My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
+                    <div class="centered-container">
+                        <p>My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
+                        <p>My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
                     </div>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
