--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div id="home" class="section">
             <div class="container">
                 <main>
-                    <h1 class="landing-page">Jack Cooper's Home Page</h1>
+                    <h1 class="landing-page">Home Page</h1>
                     <div class="centered-container">
-                        <div id="typed-text">Yo! Hello!</div>
+                        <div id="typed-text" class="typed-text">Yo! Hello!</div>
                     </div>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
