--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <main>
                     <h1 class="landing-page">Home Page</h1>
                     <div class="centered-container">
-                        <div id="typed-text" class="typed-text">Yo! Hello!</div>
+                        <div id="typed-text" class="typed-text-animation">Yo! Yo! What's up!?</div>
                     </div>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
