--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <a href="#blog">Blog</a> |
             <a href="#contact">Contact</a>
         </nav>
-        <button id="mode-toggle">Switch to Dark Mode</button>
+        <div class="navbar">
+            <button id="mode-toggle">Switch to Dark Mode</button>
+        </div>
     </header>
     <div class="main-content">
         <!-- Home -->
