--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   </div>
              </div>
              <div class="container">
-                 <h2>Currently Inprogress</h2>
+                 <h2>In Progress</h2>
                     <div class="svg-divider">
                         <svg class="divider-style-alt" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
