--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
-                    <div class="centered-container">
+                    <div class="container">
                         <p>As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
                         expand my technical skills. While I have a strong foundation in programming languages like C, C++, and Python, I am currently honing my skills in
                         AI and machine learning, evident in my ongoing personal projects. My experience includes developing innovative software solutions and enhancing existing
