--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <!-- Home -->
     <div id="home" class="section">
-        <div class="container">
+        <div class="section-container">
             <main>
                     <h1 class="landing-page">Home Page</h1>
                     <div class="centered-container">
@@ -70,7 +70,7 @@
          </div>
          <!-- About -->
          <div id="about" class="section" style="display: none;">
-             <div class="container">
+             <div class="section-container">
                  <h1>About Me!</h2>
                  <div class="svg-divider">
                     <svg class="divider-style-main" height="20" width="100%">
@@ -86,7 +86,7 @@
              </div>
          <!-- Demos -->
          <div id="demos" class="section" style="display: none;">
-             <div class="container">
+             <div class="section-container">
                  <h1>Project Demos</h1>
                  <div class="svg-divider">
                     <svg class="divider-style-main" height="20" width="100%">
@@ -99,7 +99,7 @@
          </div>
          <!-- Projects -->
          <div id="projects" class="section" style="display: none;">
-             <div class="container">
+             <div class="section-container">
                  <h1>Projects</h1>
                  <div class="svg-divider">
                     <svg class="divider-style-main" height="20" width="100%">
@@ -126,7 +126,7 @@
          </div>
         <!-- Music -->
          <div id="music" class="section" style="display: none;">
-             <div class="container">
+             <div class="section-container">
                  <h1>Music (Spuqk)</h1>
                  <div class="svg-divider">
                     <svg class="divider-style-main" height="20" width="100%">
@@ -139,7 +139,7 @@
          </div>
          <!-- Blog -->
          <div id="blog" class="section" style="display: none;">
-             <div class="container">
+             <div class="section-container">
                  <h1>Personal Blog</h1>
                      <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
@@ -150,7 +150,7 @@
          </div>
          <!-- Contact Me -->
          <div id="contact" class="section" style="display: none;">
-             <div class="container">
+             <div class="section-container">
                 <h1>Contact Me</h1>
                     <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
                  <div class="svg-divider">
