--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </header>
     <!-- Home -->
     <div id="home" class="section">
-        <div class="section-container">
+        <div class="container">
             <h1 class="landing-page">Home Page</h1>
             <div class="centered-container">
                 <div id="typing-animation" class="typed-text-animation"></div>
@@ -68,7 +68,7 @@
      </div>
      <!-- About -->
      <div id="about" class="section" style="display: none;">
-         <div class="section-container">
+         <div class="container">
              <h1>About Me!</h2>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
@@ -84,7 +84,7 @@
          </div>
      <!-- Demos -->
      <div id="demos" class="section" style="display: none;">
-         <div class="section-container">
+         <div class="container">
              <h1>Project Demos</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
@@ -97,7 +97,7 @@
      </div>
      <!-- Projects -->
      <div id="projects" class="section" style="display: none;">
-         <div class="section-container">
+         <div class="container">
              <h1>Projects</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
@@ -124,7 +124,7 @@
      </div>
     <!-- Music -->
      <div id="music" class="section" style="display: none;">
-         <div class="section-container">
+         <div class="container">
              <h1>Music (Spuqk)</h1>
              <div class="svg-divider">
                 <svg class="divider-style-main" height="20" width="100%">
@@ -137,7 +137,7 @@
      </div>
      <!-- Blog -->
      <div id="blog" class="section" style="display: none;">
-         <div class="section-container">
+         <div class="container">
              <h1>Personal Blog</h1>
                  <div class="svg-divider">
                     <svg class="divider-style-main" height="20" width="100%">
@@ -148,7 +148,7 @@
      </div>
      <!-- Contact Me -->
      <div id="contact" class="section" style="display: none;">
-         <div class="section-container">
+         <div class="container">
             <h1>Contact Me</h1>
                 <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
              <div class="svg-divider">
