--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="typing-animation" class="typed-text-animation"></div>
             </div>
             <div class="image-container">
-                <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border"></img>
+                <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border" class="img.lazy"></img>
             </div>
             <h2 class="landing-page">Summary</h2>
             <div class="svg-divider">
