--- a/index.html
+++ b/index.html
@@ -71,8 +71,10 @@
                 </svg>
              </div>
                  <p>I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
-                 My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
-                 But life isn't all about algorithms and code. When I'm not in front of a computer, you can find me engrossed in cooking, messing around on the decks, or binging some show. I believe in the power of creativity and continuous learning, and strive to infuse this ethos into every aspect of my life.
+                 My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of
+                 automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
+                 But life isn't all about algorithms and code. When I'm not in front of a computer, you can find me engrossed in cooking, messing around on the decks, or binging some show. I believe in the power of creativity and continuous learning, and strive to infuse this 
+                 ethos into every aspect of my life.
                  I'm excited to embark on this next chapter, applying the skills and insights I've gained to make a tangible impact in the world of tech and beyond.
                 </p>
             </div >
@@ -153,8 +155,41 @@
                 </svg>
               </div>
          </div>
+         <p>Putting some unreleased Spuqk tracks here... Release versions will come hopefully soon - if I find time :(.</p>
          <div class="container">
-             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1650185892%3Fsecret_token%3Ds-TerG8ulCwcz&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/we-1/s-TerG8ulCwcz" title="we" target="_blank" style="color: #cccccc; text-decoration: none;">we</a></div>
+             <ul>We</ul>
+             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1650185892%3Fsecret_token%3Ds-TerG8ulCwcz&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div 
+                 style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                 <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/we-1/s-TerG8ulCwcz" title="we" target="_blank" style="color: #cccccc; text-decoration: none;">we</a>
+              </div>
+             <ul>Dazed and Confused</ul>
+             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1649438364%3Fsecret_token%3Ds-KubUsNoHBPN&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true">
+                 </iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                     <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a>·
+                 <a href="https://soundcloud.com/spuqk/dazed-and-confused-1/s-KubUsNoHBPN" title="dazed and confused" target="_blank" style="color: #cccccc; text-decoration: none;">dazed and confused</a></div>
+             <ul>Metanoia</ul>
+             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1649188542%3Fsecret_token%3Ds-Vl9gQb3BjTg&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div 
+                 style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                     <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/agnosthesia/s-Vl9gQb3BjTg" title="metanoia" target="_blank" style="color: #cccccc; text-decoration: none;">metanoia</a></div>
+             <ul>Solution Explorer</ul>
+             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1646026050%3Fsecret_token%3Ds-sOqMkpQHJ7E&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+             <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                 <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a>·
+                 <a href="https://soundcloud.com/spuqk/slaps/s-sOqMkpQHJ7E" title="solution explorer" target="_blank" style="color: #cccccc; text-decoration: none;">solution explorer</a></div>
+             <ul>Here</ul>
+             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1572319300%3Fsecret_token%3Ds-A4mcZY8qPb9&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div 
+                 style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                     <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/here/s-A4mcZY8qPb9" title="Here" target="_blank" style="color: #cccccc; text-decoration: none;">Here</a></div>
+             <ul>Psychopomp</ul>
+             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" 
+                 src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1522126309%3Fsecret_token%3Ds-dt7h6Fhn3nK&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+             <div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
+                 <a href="https://soundcloud.com/spuqk" title="spuqk" target="_blank" style="color: #cccccc; text-decoration: none;">spuqk</a> · <a href="https://soundcloud.com/spuqk/psychopomp-1/s-dt7h6Fhn3nK" title="Psychopomp" target="_blank" style="color: #cccccc; text-decoration: none;">Psychopomp</a></div>
          </div>
      </div>
      <!-- Blog -->
